[package]
name = "crypto-toolkit"
version = "0.1.0"
edition = "2024"

[dependencies]
aead = "0.5.2"
aes = "0.8.4"
aes-gcm = "0.10.3"
anyhow = "1.0.99"
base64 = "0.22.1"
blake3 = "1.8.2"
clap = "4.5.46"
criterion = "0.7.0"
ed25519-dalek = "2.2.0"
getrandom = "0.3.3"
hex = "0.4.3"
k256 = "0.13.4"
num-bigint = "0.4.6"
num-integer = "0.1.46"
num-traits = "0.2.19"
pem = "3.0.5"
proptest = "1.7.0"
rand_chacha = "0.9.0"
rand_core = "0.9.3"
rug = "1.28.0"
serde = "1.0.219"
serde_json = "1.0.143"
sha2 = "0.10.9"
thiserror = "2.0.16"
x25519-dalek = "2.0.1"
