[package]
name = "crypto-toolkit"
version = "0.1.0"
edition = "2024"

[dependencies]
aes-gcm = "0.10.3"
anyhow = "1.0.99"
base64 = "0.22.1"
blake3 = "1.8.2"
clap = { version = "4.5.46", features = ["derive"] }
ed25519-dalek = "2.2.0"
getrandom = "0.3.3"
hex = "0.4.3"
k256 = "0.13.4"
num-bigint = { version = "0.4.6", features = ["rand"] }
num-integer = "0.1.46"
num-traits = "0.2.19"
pem = "3.0.5"
rand = "0.8"
rand_chacha = "0.3"
sha2 = "0.10.9"
thiserror = "2.0.16"
x25519-dalek = "2.0.1"

[dev-dependencies]
criterion = "0.7.0"
proptest = "1.7.0"
